--- a/index.html
+++ b/index.html
@@ -24,6 +24,209 @@
 </div>
 </header>
 
+<main class="main-content">
+<div class="container">
+<section>
+<form class="filters" action="index.html" method="get">
+<input class="filters-search-input" type="search" name="search" placeholder="search for a country..." aria-label="country name" required>
+<select class="filters-region-select" name="region" aria-label="regions">
+<option selected disabled>Filter by Region</option>
+<option>Africa</option>
+<option>America</option>
+<option>Asia</option>
+<option>Europe</option>
+<option>Oceonia</option>
+</select>
+</form>
+</section>
+
+<!-- index countries  -->
+
+<section class="index-countries">
+<ul class="index-countries-list">
+<li class="index-countries-item">
+<div class="index-country">
+<img class="index-country-flag" src="img/flag-germany.jpg" alt="flag-germany" width="264" height="160">
+<div class="index-country-info">
+<a class="index-country-name" href="country.index.html">Germany</a>
+<dl class="idex-country-details">
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Population:</dt>
+<dd class="index-country-details-value">81,770,900</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Europe</dt>
+<dd class="index-country-details-value">Europe</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Capital:</dt>
+<dd class="index-country-details-value">Berlin</dd>
+</div>
+</dl>
+</div>
+</div>
+</li>
+<li class="index-countries-item">
+<div class="index-country">
+<img class="index-country-flag" src="img/flag-america.jpg" alt="flag-america" width="264" height="160">
+<div class="index-country-info">
+<a class="index-country-name" href="country.index.html">United States of America</a>
+<dl class="idex-country-details">
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Population:</dt>
+<dd class="index-country-details-value">323,947,000</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Region:</dt>
+<dd class="index-country-details-value">Americas</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Capital:</dt>
+<dd class="index-country-details-value">Washington, D.C.</dd>
+</div>
+</dl>
+</div>
+</div>
+</li>
+<li class="index-countries-item">
+<div class="index-country">
+<img class="index-country-flag" src="img/flag-brasil.jpg" alt="flag-germany" width="264" height="160">
+<div class="index-country-info">
+<h3 class="index-country-name">Brazil</h3>
+<dl class="idex-country-details">
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Population:</dt>
+<dd class="index-country-details-value">206,135,893</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Region:</dt>
+<dd class="index-country-details-value">Americas</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Capital:</dt>
+<dd class="index-country-details-value">Brasília</dd>
+</div>
+</dl>
+</div>
+</div>
+</li>
+<li class="index-countries-item">
+<div class="index-country">
+<img class="index-country-flag" src="img/flag-iceland.png" alt="flag-iceland" width="264" height="160">
+<div class="index-country-info">
+<h3 class="index-country-name">Iceland</h3>
+<dl class="idex-country-details">
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Population:</dt>
+<dd class="index-country-details-value">334,300</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Region:</dt>
+<dd class="index-country-details-value">Europe</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Capital:</dt>
+<dd class="index-country-details-value">Reykjavík</dd>
+</div>
+</dl>
+</div>
+</div>
+</li>
+<li class="index-countries-item">
+<div class="index-country">
+<img class="index-country-flag" src="img/flag-afganistan.png" alt="flag-afganistan" width="264" height="160">
+<div class="index-country-info">
+<h3 class="index-country-name">Afghanistan</h3>
+<dl class="idex-country-details">
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Population:</dt>
+<dd class="index-country-details-value">27,657,145</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Region:</dt>
+<dd class="index-country-details-value">Europe</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Capital:</dt>
+<dd class="index-country-details-value">Mariehamn</dd>
+</div>
+</dl>
+</div>
+</div>
+</li>
+<li class="index-countries-item">
+<div class="index-country">
+<img class="index-country-flag" src="img/flag-Åland-Islands.jpg" alt="flag-Åland-Islands" width="264" height="160">
+<div class="index-country-info">
+<h3 class="index-country-name">Åland Islands</h3>
+<dl class="idex-country-details">
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Population:</dt>
+<dd class="index-country-details-value">28,875</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Region:</dt>
+<dd class="index-country-details-value">Europe</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Capital:</dt>
+<dd class="index-country-details-value">Mariehamn</dd>
+</div>
+</dl>
+</div>
+</div>
+</li>
+<li class="index-countries-item">
+<div class="index-country">
+<img class="index-country-flag" src="img/flag-albania.jpg" alt="flag-albania" width="264" height="160">
+<div class="index-country-info">
+<h3 class="index-country-name">Albania</h3>
+<dl class="idex-country-details">
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Population:</dt>
+<dd class="index-country-details-value">28,875</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Region:</dt>
+<dd class="index-country-details-value">Europe</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Capital:</dt>
+<dd class="index-country-details-value">Tirana</dd>
+</div>
+</dl>
+</div>
+</div>
+</li>
+<li class="index-countries-item">
+<div class="index-country">
+<img class="index-country-flag" src="img/flag-algeria.jpg" alt="flag-algeria" width="264" height="160">
+<div class="index-country-info">
+<h3 class="index-country-name">Algeria</h3>
+<dl class="idex-country-details">
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Population:</dt>
+<dd class="index-country-details-value">40,400,000</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Region:</dt>
+<dd class="index-country-details-value">Africa</dd>
+</div>
+<div class="index-country-deatils-item">
+<dt class="index-country-details-title">Capital:</dt>
+<dd class="index-country-details-value">Algiers</dd>
+</div>
+</dl>
+</div>
+</div>
+</li>
+</ul>
+</section>
+
+</div>
+</main>
+
+
     <script src="js/main.js"></script>
 </body>
 </html>
