add flag belgium

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <div class="index-country">
 <img class="index-country-flag" src="img/flag-brasil.jpg" alt="flag-germany" width="264" height="160">
 <div class="index-country-info">
-<h3 class="index-country-name">Brazil</h3>
+<a class="index-country-name" href="country.index.html">Brazil</a>
 <dl class="idex-country-details">
 <div class="index-country-deatils-item">
 <dt class="index-country-details-title">Population:</dt>
@@ -114,7 +114,7 @@
 <div class="index-country">
 <img class="index-country-flag" src="img/flag-iceland.png" alt="flag-iceland" width="264" height="160">
 <div class="index-country-info">
-<h3 class="index-country-name">Iceland</h3>
+<a class="index-country-name" href="country.index.html">Iceland</a>
 <dl class="idex-country-details">
 <div class="index-country-deatils-item">
 <dt class="index-country-details-title">Population:</dt>
@@ -136,7 +136,7 @@
 <div class="index-country">
 <img class="index-country-flag" src="img/flag-afganistan.png" alt="flag-afganistan" width="264" height="160">
 <div class="index-country-info">
-<h3 class="index-country-name">Afghanistan</h3>
+<a class="index-country-name" href="country.index.html">Afghanistan</a>
 <dl class="idex-country-details">
 <div class="index-country-deatils-item">
 <dt class="index-country-details-title">Population:</dt>
@@ -158,7 +158,7 @@
 <div class="index-country">
 <img class="index-country-flag" src="img/flag-Åland-Islands.jpg" alt="flag-Åland-Islands" width="264" height="160">
 <div class="index-country-info">
-<h3 class="index-country-name">Åland Islands</h3>
+<a class="index-country-name" href="country.index.html">Åland Islands</a>
 <dl class="idex-country-details">
 <div class="index-country-deatils-item">
 <dt class="index-country-details-title">Population:</dt>
@@ -180,7 +180,7 @@
 <div class="index-country">
 <img class="index-country-flag" src="img/flag-albania.jpg" alt="flag-albania" width="264" height="160">
 <div class="index-country-info">
-<h3 class="index-country-name">Albania</h3>
+<a class="index-country-name" href="country.index.html">Albania</a>
 <dl class="idex-country-details">
 <div class="index-country-deatils-item">
 <dt class="index-country-details-title">Population:</dt>
@@ -202,7 +202,7 @@
 <div class="index-country">
 <img class="index-country-flag" src="img/flag-algeria.jpg" alt="flag-algeria" width="264" height="160">
 <div class="index-country-info">
-<h3 class="index-country-name">Algeria</h3>
+<a class="index-country-name" href="country.index.html">Algeria</a>
 <dl class="idex-country-details">
 <div class="index-country-deatils-item">
 <dt class="index-country-details-title">Population:</dt>
